# IDIom_reviewer

./: .gitignore  .gitmodules  README.md  README_AUDIT.md  pyproject.toml
data/: DOWNLOAD_PLAN.md
idiom_audit/: __init__.py  baselines.py  cli.py  constants.py  datasets.py  deeploc.py  fasta.py  features.py  plots.py  scoring_io.py  stats.py  synthetic.py
tools/: README.md
tools/analysis/: analyze_base_rejection_deeploc.py  prepare_base_rejection_deeploc.py  run_poolwise_feature_probe.py
tools/data/: write_download_plan.py
tools/modal/: deeploc_score.py  download_test1_fastas.py  protgps_pilot.py  protgps_score_csv.py  test1_score.py  test2_score_pool.py
tools/protgps/: score_csv.py
tools/workflows/: prepare_audit_inputs.sh  run_amended_baseline_probe.sh  run_base_rejection_deeploc.sh  run_deeploc_validation.sh  run_modal_test1_pilot.sh  run_test2_random_forest.sh
