[project]
name = "idiom-rl-audit"
version = "0.1.0"
description = "Audit scripts for IDiom RL post-training and ProtGPS reward sensitivity."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "modal>=1.4.2",
  "torch>=2.11.0",
  "lightning>=2.6.1",
  "huggingface-hub>=1.13.0",
]

[project.optional-dependencies]
download = ["huggingface_hub>=0.23"]

[project.scripts]
idiom-audit = "idiom_audit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["idiom_audit*"]

[dependency-groups]
dev = [
    "modal>=1.4.2",
]
